// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error Component should match snapshot with no param 1`] = `
<div
  className="error"
>
  <div
    style={
      Object {
        "animation": "bcCCNc 300ms ease 0s 1 normal none running",
        "backfaceVisibility": "visible",
      }
    }
  >
    <div
      className="error_div"
    >
      <div
        className="error_info"
      >
        <span
          style={
            Object {
              "color": "#00E676",
              "display": "block",
              "fontSize": 48,
              "fontWeight": 800,
              "letterSpacing": 3,
            }
          }
        >
          404
        </span>
        <span
          style={
            Object {
              "color": "#94A3B8",
            }
          }
        >
          The 
          page
           you're looking for doesn't exist on FinEdge.
        </span>
      </div>
      <img
        src="/images/error.svg"
      />
      <div
        className="error_bottom"
      >
        <Link
          className="sec_btn error_home"
          to="/profile/takkar"
        >
          My Profile
        </Link>
        <Link
          className="pri_btn error_login"
          to="/"
        >
          Go to Insight Feed
        </Link>
      </div>
    </div>
  </div>
</div>
`;

exports[`Error Component should match snapshot with no-post error 1`] = `
<div
  className="error"
>
  <div
    style={
      Object {
        "animation": "bcCCNc 300ms ease 0s 1 normal none running",
        "backfaceVisibility": "visible",
      }
    }
  >
    <div
      className="error_div"
    >
      <div
        className="error_info"
      >
        <span
          style={
            Object {
              "color": "#00E676",
              "display": "block",
              "fontSize": 48,
              "fontWeight": 800,
              "letterSpacing": 3,
            }
          }
        >
          404
        </span>
        <span
          style={
            Object {
              "color": "#94A3B8",
            }
          }
        >
          The 
          post
           you're looking for doesn't exist on FinEdge.
        </span>
      </div>
      <img
        src="/images/error.svg"
      />
      <div
        className="error_bottom"
      >
        <Link
          className="sec_btn error_home"
          to="/profile/takkar"
        >
          My Profile
        </Link>
        <Link
          className="pri_btn error_login"
          to="/"
        >
          Go to Insight Feed
        </Link>
      </div>
    </div>
  </div>
</div>
`;

exports[`Error Component should match snapshot with no-user error 1`] = `
<div
  className="error"
>
  <div
    style={
      Object {
        "animation": "bcCCNc 300ms ease 0s 1 normal none running",
        "backfaceVisibility": "visible",
      }
    }
  >
    <div
      className="error_div"
    >
      <div
        className="error_info"
      >
        <span
          style={
            Object {
              "color": "#00E676",
              "display": "block",
              "fontSize": 48,
              "fontWeight": 800,
              "letterSpacing": 3,
            }
          }
        >
          404
        </span>
        <span
          style={
            Object {
              "color": "#94A3B8",
            }
          }
        >
          The 
          user
           you're looking for doesn't exist on FinEdge.
        </span>
      </div>
      <img
        src="/images/error.svg"
      />
      <div
        className="error_bottom"
      >
        <Link
          className="sec_btn error_home"
          to="/profile/takkar"
        >
          My Profile
        </Link>
        <Link
          className="pri_btn error_login"
          to="/"
        >
          Go to Insight Feed
        </Link>
      </div>
    </div>
  </div>
</div>
`;
